# point_cloud_editor

./: CMakeLists.txt  README.md
include/: cloud.h  cloudEditorWidget.h  cloudTransformTool.h  command.h  commandQueue.h  copyBuffer.h  copyCommand.h  cutCommand.h  deleteCommand.h  denoiseCommand.h  localTypes.h  mainWindow.h  pasteCommand.h  select1DTool.h  select2DTool.h  selection.h  selectionTransformTool.h  statistics.h  statisticsDialog.h  toolInterface.h  trackball.h  transformCommand.h
resources/: pceditor_resources.qrc
src/: cloud.cpp  cloudEditorWidget.cpp  cloudTransformTool.cpp  common.cpp  main.cpp  mainWindow.cpp  select1DTool.cpp  selectionTransformTool.cpp  statistics.cpp
